--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -1,9 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Prompt:wght@400;600&display=swap');
+
+body {
+  font-family: 'Prompt', sans-serif;
+}
+
 h2,
 h3 {
   font-size: 22px;
   line-height: 33px;
 }
-
 
 h5 {
   font-size: 16px;
